[tool.poetry]
name = "starkscan-proxy"
version = "0.1.0"
description = "Transparent Proxy to call starkscan APIs"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
Flask = "^2.3.3"
gunicorn = "^21.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
